ecmascript/parser/tests/test262-error-references/fail/39a0bd52fcde419f.js.stderr
error: Unexpected token
 --> $DIR/tests/test262-parser/fail/39a0bd52fcde419f.js:1:1
  |
1 | export *
  | ^^^^^^

